openshift-cel/disallow-deprecated-apis/.kyverno-test/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: check-routes
policies:
- ../disallow-deprecated-apis.yaml
resources:
- resources.yaml
results:
- kind: ClusterRole
  policy: disallow-deprecated-apis
  resources:
  - openshift-cluster-role-deprecated
  result: fail
  rule: check-deprecated-apis
- kind: ClusterRoleBinding
  policy: disallow-deprecated-apis
  resources:
  - openshift-cluster-role-binding-deprecated
  result: fail
  rule: check-deprecated-apis
- kind: Role
  policy: disallow-deprecated-apis
  resources:
  - openshift-role-deprecated
  result: fail
  rule: check-deprecated-apis
- kind: RoleBinding
  policy: disallow-deprecated-apis
  resources:
  - openshift-role-binding-deprecated
  result: fail
  rule: check-deprecated-apis
